@@ -5,6 +5,7 @@ import com.binarybrain.classroom.model.Classroom;
 import com.binarybrain.classroom.repo.ClassroomRepository;
 import com.binarybrain.classroom.service.*;
 import com.binarybrain.exception.*;
+import com.binarybrain.exception.global.GlobalExceptionHandler;
 import feign.FeignException;
 import org.springframework.stereotype.Service;
 
@@ -32,12 +33,17 @@ public class ClassroomserviceImpl implements ClassroomService {
                 .anyMatch(targetRoles::contains);
     }
     @Override
-    public Classroom createClassroom(Classroom classroom, String username) {
+    public Classroom createClassroom(ClassroomDto classroomDto, String username) {
 
         UserDto userDto = userService.getUserProfile(username);
-        if (!validateRole(userDto, Arrays.asList(TEACHER, ADMIN))){
-            throw new UserHasNotPermissionException("Only teacher or admin can create classroom!");
-        }
+        boolean isAdminOrTeacher = validateRole(userDto, List.of(ADMIN, TEACHER));
+        GlobalExceptionHandler.Thrower.throwIf(
+                !isAdminOrTeacher,
+                new UserHasNotPermissionException("Only teacher or admin can create classroom!"));
+
+        Classroom classroom = new Classroom();
+        classroom.setTitle(classroomDto.getTitle());
+        classroom.setDescription(classroomDto.getDescription());
         Long teacherId = userDto.getId();
         classroom.setStartDate(LocalDate.from(LocalDateTime.now()));
         classroom.setTeacherId(teacherId);
@@ -46,19 +52,18 @@ public class ClassroomserviceImpl implements ClassroomService {
 
     @Override
     public Classroom getClassroomById(Long id, String username) {
-        UserDto userDto = userService.getUserProfile(username);
-        if (!validateRole(userDto, Arrays.asList(TEACHER, ADMIN))){
-            throw new UserHasNotPermissionException("Only teacher or admin can manage classroom!");
-        }
-        return classroomRepository.findById(id).orElseThrow(() -> new ResourceNotFoundException("Classroom not found with id: " + id));
+        return classroomRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("Classroom not found with id: " + id));
     }
 
     @Override
     public List<Classroom> getAllClassroomByTeacherId(Long id, String username) {
         UserDto userDto = userService.getUserProfile(username);
-        if (!validateRole(userDto, Arrays.asList(TEACHER, ADMIN))){
-            throw new UserHasNotPermissionException("Only teacher or admin can manage classroom!");
-        }
+        boolean isAdmin = validateRole(userDto, List.of(ADMIN));
+        GlobalExceptionHandler.Thrower.throwIf(
+                (!isAdmin && !userDto.getId().equals(id)),
+                new UserHasNotPermissionException("Only Admin or corresponding Teacher can get classroom list."));
+
         return classroomRepository.findByTeacherId(id);
     }
 
@@ -76,14 +81,16 @@ public class ClassroomserviceImpl implements ClassroomService {
         try {
             Classroom classroom = getClassroomById(classroomId, username);
             validateClassroomModificationPermission(classroom, username);
-            UserDto student = userService.getUserProfileById(studentId, username);
+            UserDto studentDto = userService.getUserProfileById(studentId, username);
 
-            if (!validateRole(student, List.of("STUDENT"))) {
-                throw new UserHasNotPermissionException("Only students can be added to the classroom!");
-            }
-            if (classroom.getStudentIds().contains(studentId)) {
-                throw new AlreadyExistsException("Student is already in the classroom!");
-            }
+            boolean isStudent = validateRole(studentDto, List.of("STUDENT"));
+            GlobalExceptionHandler.Thrower.throwIf(
+                    !isStudent,
+                    new UserHasNotPermissionException("Only students can be added to the classroom!"));
+            GlobalExceptionHandler.Thrower.throwIf(
+                    classroom.getStudentIds().contains(studentId),
+                    new AlreadyExistsException("Student is already in the classroom!"));
+
             Set<Long> studentIds = new HashSet<>(Set.copyOf(classroom.getStudentIds()));
             studentIds.add(studentId);
             classroom.setStudentIds(studentIds);
@@ -100,9 +107,10 @@ public class ClassroomserviceImpl implements ClassroomService {
             Classroom classroom = getClassroomById(classroomId, username);
             validateClassroomModificationPermission(classroom, username);
 
-            if (!classroom.getStudentIds().contains(studentId)) {
-                throw new ResourceNotFoundException("Student not found in the classroom!");
-            }
+            GlobalExceptionHandler.Thrower.throwIf(
+                    !classroom.getStudentIds().contains(studentId),
+                    new ResourceNotFoundException("Student not found in the classroom!"));
+
             Set<Long> studentIds = new HashSet<>(Set.copyOf(classroom.getStudentIds()));
             studentIds.remove(studentId);
             classroom.setStudentIds(studentIds);
@@ -124,9 +132,10 @@ public class ClassroomserviceImpl implements ClassroomService {
         validateClassroomModificationPermission(classroom, username);
 
         courseService.getCourseById(courseId, username);
-        if (classroom.getCourseIds().contains(courseId)) {
-            throw new AlreadyExistsException("Course is already assigned to this classroom.");
-        }
+        GlobalExceptionHandler.Thrower.throwIf(
+                classroom.getCourseIds().contains(courseId),
+                new AlreadyExistsException("Course is already assigned to this classroom."));
+
         classroom.getCourseIds().add(courseId);
 
         return classroomRepository.save(classroom);
@@ -138,9 +147,10 @@ public class ClassroomserviceImpl implements ClassroomService {
             Classroom classroom = getClassroomById(classroomId, username);
             validateClassroomModificationPermission(classroom, username);
 
-            if (!classroom.getCourseIds().contains(courseId)) {
-                throw new ResourceNotFoundException("This Course is not added in this classroom!");
-            }
+            GlobalExceptionHandler.Thrower.throwIf(
+                    !classroom.getCourseIds().contains(courseId),
+                    new ResourceNotFoundException("This Course is not added in this classroom!"));
+
             Set<Long> courseIds = new HashSet<>(Set.copyOf(classroom.getCourseIds()));
             courseIds.remove(courseId);
             classroom.setCourseIds(courseIds);
@@ -154,7 +164,6 @@ public class ClassroomserviceImpl implements ClassroomService {
     @Override
     public List<CourseDto> getAllCourseInClassroom(Long classroomId, String username) {
         Classroom classroom = getClassroomById(classroomId, username);
-        validateClassroomModificationPermission(classroom, username);
 
         List<Long> courseIds = new ArrayList<>(classroom.getCourseIds());
 
@@ -164,10 +173,7 @@ public class ClassroomserviceImpl implements ClassroomService {
     private void validateClassroomModificationPermission(Classroom classroom, String jwt) {
         UserDto userDto = userService.getUserProfile(jwt);
         boolean isAdmin = validateRole(userDto, List.of(ADMIN));
-        boolean isTeacher = validateRole(userDto, List.of(TEACHER));
 
-        if (!isAdmin && (!isTeacher || !classroom.getTeacherId().equals(userDto.getId()))) {
-            throw new UserHasNotPermissionException("You do not have permission to modify this course.");
-        }
+        GlobalExceptionHandler.Thrower.throwIf((!isAdmin && !classroom.getTeacherId().equals(userDto.getId())),new UserHasNotPermissionException("You do not have permission to modify this classroom."));
     }
 }
